--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 		<link rel="stylesheet" type="text/css" href="css/component.css" />
 		<link rel="stylesheet" type="text/css" href="css/autocomplete.css" />
 		<script src="js/modernizr.custom.js"></script>
+		<script src="http://d3js.org/d3.v3.min.js"></script>
+		<script src="http://d3js.org/d3.hexbin.v0.min.js?5c6e4f0"></script>
+		<script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
+		<script src="js/hexbin.js"></script>
 
 	</head>
 	<body>
@@ -32,18 +36,6 @@
 							<li>
 								<span><label for="q3">What time do you sleep?</label></span>
 								 <input id="q3" name="q3" type="text"/>
-							</li>
-							<li>
-								<span><label for="q4">How do you like your veggies?</label></span>
-								<input id="q4" name="q4" type="text"/>
-							</li>
-							<li>
-								<span><label for="q5">What book inspires you?</label></span>
-								<input id="q5" name="q5" type="text"/>
-							</li>
-							<li>
-								<span><label for="q6">What's your profession?</label></span>
-								<input id="q6" name="q6" type="text"/>
 							</li>
 						</ol><!-- /questions -->
 						<button class="submit" type="submit">Send answers</button>
@@ -89,6 +81,8 @@
 
 					messageEl.innerHTML += 'Thank you! We\'ll be in touch.';
 					classie.addClass( messageEl, 'show' );
+
+					display_svg();
 				}
 			} );
 		</script>
@@ -96,5 +90,6 @@
 		<script src="http://thecodeplayer.com/uploads/js/jquery-1.9.1.min.js" type="text/javascript"></script>
 		<script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 		<script src="js/autocomplete.js"></script>
+		
 	</body>
 </html>
